[v0.0.2] Fixed Sprint overflow-x scrolling close #1

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -3,6 +3,7 @@ html, body {
 }
 
 nav{
+  display: block;
   padding: 10px;
   background: white;
   border-bottom: 1px solid #e1e2e4;
@@ -29,6 +30,8 @@ nav h6{
   padding: 0px;
   background: #fafafb;
   height: 100%;
+  max-height: 100%;
+  overflow-y: auto;
 }
 #main{
   height: 100%;
@@ -137,10 +140,14 @@ message .msg{
 }
 
 
+/* Container */
+
 container{
   display: block;
-  overflow-x: scroll;
-  
+  white-space: nowrap;
+  max-width: auto;
+  height: 100%;
+  overflow-x: auto;
   padding: 10px;
 }
 
@@ -163,8 +170,8 @@ card > .header{
 
 column{
   vertical-align: top;
-  display: inline-block;
   width: 256px;
+  display: inline-block;
 }
 
 column > .header{
